--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <div class="curriculum-list detailed">
                     <div class="curriculum-card detailed scroll-reveal">
                         <div class="season-header season-1"
-                            style="background: linear-gradient(135deg, #0F172A 0%, #1E293B 100%);">
+                            style="background: linear-gradient(135deg, #1E3A8A 0%, #3B82F6 100%);">
                             <span class="season-badge">完全網羅</span>
                             <h3>AI活用マスターコース</h3>
                             <p>思考法から実務適用まで、一気通貫で習得します。</p>
