--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="#" class="logo">withAI<span>.</span></a>
             <nav class="header-nav">
                 <a href="#about" class="nav-link">特徴</a>
+                <a href="cases.html" class="nav-link">導入事例</a>
                 <a href="#subsidy" class="nav-link">助成金</a>
                 <a href="#curriculum" class="nav-link">カリキュラム</a>
                 <a href="#pricing" class="nav-link">料金</a>
