--- a/cases.html
+++ b/cases.html
@@ -387,6 +387,7 @@
             <a href="index.html" class="logo">withAI<span>.</span></a>
             <nav class="header-nav" aria-label="メインナビゲーション">
                 <a href="index.html#about" class="nav-link">特徴</a>
+                <a href="cases.html" class="nav-link">導入事例</a>
                 <a href="index.html#subsidy" class="nav-link">助成金</a>
                 <a href="index.html#curriculum" class="nav-link">カリキュラム</a>
                 <a href="index.html#pricing" class="nav-link">料金</a>
