--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 
         <!-- ①.5 トンネル効果画像（明るいオフィス） -->
         <section class="section--visual-break">
-            <div class="visual-break-img"
-                style="background-image: url('https://images.unsplash.com/photo-1497366216548-37526070297c?q=80&w=2000&auto=format&fit=crop');">
+            <div class="visual-break-img" style="background-image: url('images/office_scene.png');">
             </div>
         </section>
 
