--- a/index.html
+++ b/index.html
@@ -189,21 +189,31 @@
                     <h2 class="section-title">「AI研修」は、<br>最強の採用戦略になります。</h2>
                     <p class="section-subtitle">求職者は「AIスキルで成長できる会社」を重視しています。</p>
                 </div>
-                <div class="recruitment-grid scroll-reveal">
-                    <div class="recruitment-card">
-                        <div class="recruitment-icon">👥</div>
-                        <h3>応募数・質の向上</h3>
-                        <p>採用ページに「AI研修あり」と記載するだけで、成長意欲の高い人材のクリック率がUPします。</p>
+                <div class="recruitment-content"
+                    style="display:flex; gap:40px; align-items:center; margin-bottom:40px;">
+                    <div class="recruitment-img" style="flex:1;">
+                        <img src="https://placehold.co/800x600/e0f2fe/0369a1?text=Recruitment+Image%0AHappy+Team+Success"
+                            alt="Recruitment Team"
+                            style="width:100%; border-radius:16px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
                     </div>
-                    <div class="recruitment-card">
-                        <div class="recruitment-icon">⚡</div>
-                        <h3>即戦力化</h3>
-                        <p>「新人研修＋AI講座」の組み合わせで、入社後すぐにAIを活用できる人材へと育成可能です。</p>
-                    </div>
-                    <div class="recruitment-card">
-                        <div class="recruitment-icon">🤝</div>
-                        <h3>定着率UP</h3>
-                        <p>スキルアップの機会を提供することで、従業員満足度と定着率が向上します。</p>
+                    <div class="recruitment-text" style="flex:1;">
+                        <div class="recruitment-grid scroll-reveal">
+                            <div class="recruitment-card">
+                                <div class="recruitment-icon">👥</div>
+                                <h3>応募数・質の向上</h3>
+                                <p>採用ページに「AI研修あり」と記載するだけで、成長意欲の高い人材のクリック率がUPします。</p>
+                            </div>
+                            <div class="recruitment-card">
+                                <div class="recruitment-icon">⚡</div>
+                                <h3>即戦力化</h3>
+                                <p>「新人研修＋AI講座」の組み合わせで、入社後すぐにAIを活用できる人材へと育成可能です。</p>
+                            </div>
+                            <div class="recruitment-card">
+                                <div class="recruitment-icon">🤝</div>
+                                <h3>定着率UP</h3>
+                                <p>スキルアップの機会を提供することで、従業員満足度と定着率が向上します。</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -278,37 +288,44 @@
                             class="section-subtitle-sm">（なぜ効果が出るのか？）</span></h2>
                     <p class="section-subtitle">本研修は、単なるAIツール講座ではありません。</p>
                 </div>
-                <ol class="philosophy-grid">
-                    <li class="philosophy-card scroll-reveal">
-                        <div class="phil-num" aria-hidden="true">01</div>
-                        <h3>“思考法 → 実践 → 業務設計”の<br>完全三段階</h3>
-                        <ul>
-                            <li>AI思考法を理解（指示の出し方・思考の構造化）</li>
-                            <li>業務で使えるレベルまで練習（実務ワーク中心）</li>
-                            <li>自社の業務に落とし込む（業務フロー・プロンプト設計）</li>
-                        </ul>
-                    </li>
-                    <li class="philosophy-card scroll-reveal delay-1">
-                        <div class="phil-num" aria-hidden="true">02</div>
-                        <h3>現場での再現性が高い理由</h3>
-                        <ul>
-                            <li>全内容が「実際の業務に結びつく」構造</li>
-                            <li>ChatGPTやGeminiを使い、その場で改善</li>
-                            <li>ワーク中心の“演習比率60%以上”</li>
-                            <li>プログラミング不要</li>
-                        </ul>
-                    </li>
-                    <li class="philosophy-card scroll-reveal delay-2">
-                        <div class="phil-num" aria-hidden="true">03</div>
-                        <h3>AI初心者でも結果が出る理由</h3>
-                        <ul>
-                            <li>専門用語を排除</li>
-                            <li>PC基礎があれば誰でも操作可能</li>
-                            <li>各業務をAIに置き換える具体的手順が明確</li>
-                            <li>“つまずきポイント”を逆算してカリキュラムを作成</li>
-                        </ul>
-                    </li>
-                </ol>
+                <div class="philosophy-wrapper" style="display:flex; gap:40px; align-items:flex-start;">
+                    <ol class="philosophy-grid" style="flex:1;">
+                        <li class="philosophy-card scroll-reveal">
+                            <div class="phil-num" aria-hidden="true">01</div>
+                            <h3>“思考法 → 実践 → 業務設計”の<br>完全三段階</h3>
+                            <ul>
+                                <li>AI思考法を理解（指示の出し方・思考の構造化）</li>
+                                <li>業務で使えるレベルまで練習（実務ワーク中心）</li>
+                                <li>自社の業務に落とし込む（業務フロー・プロンプト設計）</li>
+                            </ul>
+                        </li>
+                        <li class="philosophy-card scroll-reveal delay-1">
+                            <div class="phil-num" aria-hidden="true">02</div>
+                            <h3>現場での再現性が高い理由</h3>
+                            <ul>
+                                <li>全内容が「実際の業務に結びつく」構造</li>
+                                <li>ChatGPTやGeminiを使い、その場で改善</li>
+                                <li>ワーク中心の“演習比率60%以上”</li>
+                                <li>プログラミング不要</li>
+                            </ul>
+                        </li>
+                        <li class="philosophy-card scroll-reveal delay-2">
+                            <div class="phil-num" aria-hidden="true">03</div>
+                            <h3>AI初心者でも結果が出る理由</h3>
+                            <ul>
+                                <li>専門用語を排除</li>
+                                <li>PC基礎があれば誰でも操作可能</li>
+                                <li>各業務をAIに置き換える具体的手順が明確</li>
+                                <li>“つまずきポイント”を逆算してカリキュラムを作成</li>
+                            </ul>
+                        </li>
+                    </ol>
+                    <div class="philosophy-img" style="flex:1; position:sticky; top:100px;">
+                        <img src="https://placehold.co/800x1000/f0f9ff/0c4a6e?text=Training+Philosophy%0APractical+Workshop"
+                            alt="Philosophy Workshop"
+                            style="width:100%; border-radius:16px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
+                    </div>
+                </div>
             </div>
         </section>
 
